--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_image">"Catedral de Huamanga"</string>
     <string name="lorem">Gracias por la respuesta, tengo Android Studio 2.2.3 y uno de los íconos sería el del engranaje de color celeste que aparece al final de los íconos (no el de barra del título), y también hay otros que ha utilizado y ahora no recuerdo, pero que aparecen en el video, pero no vienen en la configuración por defecto de Android Studio.</string>
+    <string name="img_transition">transition</string>
 </resources>
